Fixed naming of Mid Rage preference.

--- a/Lesson06-Visualizer-Preferences/T06.06-Exercise-AddTwoMoreCheckboxes/app/src/main/res/values/bools.xml
+++ b/Lesson06-Visualizer-Preferences/T06.06-Exercise-AddTwoMoreCheckboxes/app/src/main/res/values/bools.xml
@@ -2,6 +2,6 @@
 <resources>
     <bool name="pref_show_bass_default">true</bool>
     <!-- Done (3) Add any extra booleans for the new checkboxes -->
-    <bool name="pref_show_mid_default">true</bool>
+    <bool name="pref_show_mid_rage_default">true</bool>
     <bool name="pref_show_treble_default">true</bool>
 </resources>
